# rust_project

./: .env  Cargo.toml
migrations/2022-08-03-125515_create_vehicles/: down.sql  up.sql
src/: brand_handlers.rs  brands_handlers.rs  brands_test.rs  main.rs  models.rs  models_handlers.rs  owners_handlers.rs  schema.rs  tests.rs  vehicle_tests.rs
src/handlers/: brands_handlers.rs  mod.rs  models_handlers.rs  owners_handlers.rs
src/tests/: brand_no_db_tests.rs  brand_tests.rs  invalid_brand_tests.rs  invalid_model_tests.rs  invalid_owner_tests.rs  mod.rs  model_no_db_tests.rs  model_tests.rs  owner_no_db_tests.rs  owner_tests.rs
