[package]
name = "vehicles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = "1.1.2"
derive_more = "0.99.17"
json = "0.12"
log = "0.4"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
watch = "0.2.2"
cargo-watch = "8.1.2"