[package]
name = "vehicles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {git="https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
watch = "0.2.2"
cargo-watch = "8.1.2"
actix-cors = "0.6.2"
derive_more = "0.99.17"
